# pySynthMRI

./: README2.md  pyproject.toml
src/: config.json
